// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it passes a11y on single radio 1`] = `
<div>
  <div
    class="govuk-form-group lbh-form-group"
    id="test"
  >
    <label
      class="govuk-label lbh-label"
      for="test-field"
    >
      NumberInput Test
      
    </label>
    <input
      class="govuk-input lbh-input"
      id="test-field"
      name="test"
      role="spinbutton"
      value=""
    />
  </div>
</div>
`;

exports[`it renders correctly 1`] = `
<div>
  <input
    class="govuk-input lbh-input"
    role="spinbutton"
    value=""
  />
</div>
`;
